# assignment-11-uv-

./: ASSIGNMENT_3_image.ipynb  README.md  assignment_4_aisuit.ipynb  assignment_5.ipynb  pyproject.toml
