[project]
name = "project-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "arhamasif62978@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-01 = "project_01:main"
name = "project_01.hello:greet"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
